@startuml

title __APP's Class Diagram__\n

  namespace  {
    namespace om.spybot.app {
      class com.spybot.app.AppSetting {
          {static} + hideSystemUI()
      }
    }
  }
  

  namespace  {
    namespace om.spybot.app {
      class com.spybot.app.MainActivity {
          # onCreate()
          ~ CheckButton()
          ~ GetDirection()
          ~ Moving()
          ~ OnClick()
          ~ createButton()
          ~ findEnemy()
          ~ resetButtons()
      }
    }
  }
  

  namespace  {
    namespace om.spybot.app {
      class com.spybot.app.MainMenu {
          + onClick()
          # onCreate()
      }
    }
  }
  

  com.spybot.app.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.spybot.app.MainMenu .up.|> android.view.View.OnClickListener
  com.spybot.app.MainMenu -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
